kubernetes.gateway.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsdemo-app
  labels:
    app: opsdemo
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: opsdemo
  template:
    metadata:
      labels:
        app: opsdemo
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: opsdemo-app
          image: progfarkas/opsdemo:0.3.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 3
          lifecycle:
            preStop: # https://engineering.rakuten.today/post/graceful-k8s-delpoyments/
              sleep:
                seconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: opsdemo-service
spec:
  selector:
    app: opsdemo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opsdemo-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: ingress-traefik
      sectionName: web
  hostnames:
    - opsdemo.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: opsdemo-service
          port: 8080
